@@ -7,6 +7,7 @@ NEW FUNCTIONS ADDED:
   * PlotConDens() plots conditional densities using a grouping variable.
   * StrSplit() is a convenience function with more defaults than strsplit.
   * SplitToCol() splits columns of a data.frame using a split.
+  * WrdDeleteBookmark() extends the suite of WrdBookmark functions.
 
 UPDATED FUNCTIONS:
   * Append() for data.frames can also append rows now.
@@ -20,6 +21,8 @@ UPDATED FUNCTIONS:
   * Format interpretes negative digits in the same mannor as round.
   * MAE, MSE, RMSE will pass on dots arguments to mean allowing to 
     trim the data.
+  * WrdBookmark's argument bookmark has been renamed to name to be consistent
+    with the rest of the word bookmark functions.
     
 BUGFIXES:
   * Format will respect eps if defined in a format template fmt now.
